--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,8 +19,8 @@ services:
       - "8000:8000"
 
     volumes:
-      - media:/app/media
+      - ./dj_travel_app
 
-volumes:
-  media:
+
+media:
 
