--- a/requirements.txt
+++ b/requirements.txt
@@ -9,15 +9,19 @@ django-storages==1.14.6
 djangorestframework==3.16.1
 dotenv==0.9.9
 filelock==3.20.0
+flake8==7.3.0
 gunicorn==23.0.0
 identify==2.6.15
 jmespath==1.0.1
+mccabe==0.7.0
 nodeenv==1.9.1
 packaging==25.0
 pillow==11.3.0
 platformdirs==4.5.0
 pre_commit==4.3.0
 psycopg2-binary==2.9.10
+pycodestyle==2.14.0
+pyflakes==3.4.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 PyYAML==6.0.3
@@ -27,3 +31,4 @@ sqlparse==0.5.3
 tzdata==2025.2
 urllib3==2.5.0
 virtualenv==20.35.4
+
